# siphash-bench

./: .gitmodules  Cargo.toml  bitcoin_siphash_wrapper.cpp  build.rs
benches/: foo.rs
src/: lib.rs
