[package]

name = "siphash-bench"
version = "0.0.1"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
build = "build.rs"
edition = "2018"


[dependencies]
bitcoin_hashes = "*"

[build-dependencies]
cc = "*"


[profile.bench]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = true
codegen-units = 1
incremental = true
overflow-checks = false